added profile picture

--- a/yagna-profile/src/app/app.component.html
+++ b/yagna-profile/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-header-component></app-header-component>
+<div class = "container">
+    <div class="profile-picture">
+        <app-profile-picture></app-profile-picture>
+        <app-profile-picture-data></app-profile-picture-data>
 
+    </div>
+    <app-header-component></app-header-component>
+</div>
