--- a/yagna-profile/src/app/header-component/header-component.component.html
+++ b/yagna-profile/src/app/header-component/header-component.component.html
@@ -1,7 +1,11 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button class="example-icon" [matMenuTriggerFor]="menu" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
     <span>My App</span>
     <span class="example-spacer"></span>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>About Me</button>
+        <button mat-menu-item>Publications</button>
+      </mat-menu>
   </mat-toolbar>
