--- a/yagna-profile/src/app/header-component/header-component.component.html
+++ b/yagna-profile/src/app/header-component/header-component.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<!--<mat-toolbar>
     <button mat-icon-button class="example-icon" [matMenuTriggerFor]="menu" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
@@ -8,4 +8,12 @@
         <button mat-menu-item>About Me</button>
         <button mat-menu-item>Publications</button>
       </mat-menu>
-  </mat-toolbar>
+  </mat-toolbar> -->
+  <div class="custom-toolbar">
+    <button class="custom-button">About</button>
+    <button class="custom-button">Let's talk about</button>
+    <button class="custom-button">Gallery</button>
+    <button class="custom-button">Resume</button>
+  </div>
+  
+  
