--- a/yagna-profile/src/app/app.component.html
+++ b/yagna-profile/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class = "container">
+<div class="container">
     <div class="profile-picture">
         <app-profile-picture></app-profile-picture>
         <app-profile-picture-data></app-profile-picture-data>
-
     </div>
     <app-header-component></app-header-component>
+    <router-outlet></router-outlet>
 </div>
