--- a/yagna-profile/src/app/header-component/header-component.component.html
+++ b/yagna-profile/src/app/header-component/header-component.component.html
@@ -2,5 +2,5 @@
   <button routerLink="/about" class="custom-button">About</button>
   <button class="custom-button">Let's talk about</button>
   <button class="custom-button">Gallery</button>
-  <button class="custom-button">Resume</button>
+  <button routerLink="/Resume" class="custom-button">Resume</button>
 </div>
