Feat: Updated the router to be inside the header component

--- a/yagna-profile/src/app/header-component/header-component.component.html
+++ b/yagna-profile/src/app/header-component/header-component.component.html
@@ -4,3 +4,5 @@
   <button class="custom-button">Gallery</button>
   <button routerLink="/Resume" class="custom-button">Resume</button>
 </div>
+<br><br>
+<router-outlet></router-outlet>
