--- a/yagna-profile/src/app/resume-build/resume-build.component.html
+++ b/yagna-profile/src/app/resume-build/resume-build.component.html
@@ -1,25 +1,43 @@
 <div class="center-container">
-
-    <h1>Field:  Computational Fluid Dynamics (CFD) und Fluid- and Structural Interaction (FSI)   </h1>
-    <h2>FlowThermoLab under Dr Sandeep Mouvanal und Dr.Chennakesava Kadapa. </h2>  
-    <h3>  •	Fluid-structure interaction on a rigid body with Open Foam and 6DOF solver. <br>
-    •	Partitioned coupling of fluid and solid dynamics.<br>
-    •	Conducting a literature study on coupling techniques and implicit methods of two-way simulation.<br>
-    •	Implementation of a methodology to improve the calculation time.</h3>
-    <h1>Field:  Computational Fluid Dynamics (CFD) und Machine Learning (ML)</h1>
-    <h2>Otto von Guericke Universität, Magdeburg, Deutschland</h2>
-    <h3>    •	Research into alternative fuel concepts for combustion and reduction of simulation costs. <br>
-            •	Investigation of combustion flames to optimize the performance of CFD simulations by Cantera.<br>
-            •	Participation in data generation, development of machine learning models and interpretating the<br> model with the help of python.</h3>
-  <h1>Field: Software Testing</h1> 
-  <h2>Indus Digi Tech, Hyderabad, India</h2>
-  <h3> •	Involved in functional testing, re-testing, regression testing and end-to-end testing:<br> Performed GUI testing and database testing.<br>
-    •	Identified automation test scenarios and analyzed the manual test cases for the feasibility<br> of automation in the regression phase.<br>
-    •	Implementation of the required reusable actions, repositories, environment variables, <br>test data and functions required for the functionality of the automation scripts functionality.</h3>
-
-    <h1>  Field: Construction of water pipelines</h1>
-    <h2>MEIL Megha Engineering Infra structure Ltd, India</h2>
-  <h3>    •	Assisted the lead process engineers in commissioning the pipeline you built. <br>
-          •	Improved efficiency by 20% by monitoring process performance and examining process flow diagrams (PFD).<br>
-          •	Created and adhered to process procedures to ensure compliance with industry regulations.</h3>
+  <div class="section">
+      <h1>Field: Computational Fluid Dynamics (CFD) und Fluid- and Structural Interaction (FSI)</h1>
+      <h2>FlowThermoLab under Dr. Sandeep Mouvanal and Dr. Chennakesava Kadapa</h2>
+      <p>
+          Fluid-structure interaction on a rigid body with OpenFOAM and 6DOF solver. <br>
+          Partitioned coupling of fluid and solid dynamics. <br>
+          Conducting a literature study on coupling techniques and implicit methods of two-way simulation. <br>
+          Implementation of a methodology to improve calculation time.
+      </p>
+  </div>
+  
+  <div class="section">
+      <h1>Field: Computational Fluid Dynamics (CFD) und Machine Learning (ML)</h1>
+      <h2>Otto von Guericke Universität, Magdeburg, Deutschland</h2>
+      <p>
+          Research into alternative fuel concepts for combustion and reduction of simulation costs. <br>
+          Investigation of combustion flames to optimize the performance of CFD simulations by Cantera. <br>
+          Participation in data generation, development of machine learning models, and interpreting the model with the help of Python.
+      </p>
+  </div>
+  
+  <div class="section">
+      <h1>Field: Software Testing</h1>
+      <h2>Indus Digi Tech, Hyderabad, India</h2>
+      <p>
+          Involved in functional testing, re-testing, regression testing, and end-to-end testing. <br>
+          Performed GUI testing and database testing. <br>
+          Identified automation test scenarios and analyzed the manual test cases for the feasibility of automation in the regression phase. <br>
+          Implementation of the required reusable actions, repositories, environment variables, test data, and functions required for the functionality of the automation scripts functionality.
+      </p>
+  </div>
+  
+  <div class="section">
+      <h1>Field: Construction of Water Pipelines</h1>
+      <h2>MEIL Megha Engineering Infrastructure Ltd, India</h2>
+      <p>
+          Assisted the lead process engineers in commissioning the pipelines built. <br>
+          Improved efficiency by 20% by monitoring process performance and examining process flow diagrams (PFD). <br>
+          Created and adhered to process procedures to ensure compliance with industry regulations.
+      </p>
+  </div>
 </div>
