--- a/yagna-profile/src/app/app.component.css
+++ b/yagna-profile/src/app/app.component.css
@@ -1,15 +1,14 @@
 .container{
     display: grid;
     grid-template-columns: 30% 80%;   
-    background-image: url('/assets/images/background-image.jpg'); /* Adjust the path and file name accordingly */
-    background-size: cover; /* Adjust the background size as needed */
-    background-attachment: fixed; /* Add this line for a fixed background */
-    background-position: center; /* Adjust the background position as needed */ 
-    min-height: 30vh; /* Ensure the container covers the entire viewport height */
+    background-image: url('/assets/images/background-image.jpg'); 
+    background-size: cover; 
+    background-attachment: fixed; 
+    background-position: center; 
+    min-height: 100%; 
     color: #fff;
     padding: 20px;
-    /* Set the background color with reduced opacity */
-    background-color: rgba(0, 0, 0, 0.2); /* Adjust the alpha value (0.7 for 70% opacity) */
+    background-color: rgba(0, 0, 0, 0); 
 }
 
 .profile-picture{
