--- a/yagna-profile/src/app/app.component.css
+++ b/yagna-profile/src/app/app.component.css
@@ -6,6 +6,7 @@
     background-attachment: fixed; 
     background-position: center; 
     min-height: 100%; 
+    min-width: 100%;
     color: #fff;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0); 
