--- a/yagna-profile/src/app/profile-picture-data/profile-picture-data.component.css
+++ b/yagna-profile/src/app/profile-picture-data/profile-picture-data.component.css
@@ -1,6 +1,28 @@
 .example-spacer {
     flex: 1 1 auto;
   }
+
+  .address-details a {
+    font-size: 15px;
+    text-decoration: none;
+    color: white; /* Adjust the color as needed */
+    justify-content: center;
+  }
+
+  .address-details {
+    font-size: 18px;
+    text-decoration: none;
+    color: white; /* Adjust the color as needed */
+    justify-content: center;
+  }
+
+  .address-icon svg {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
   .github-icon {
     padding: 2px;
@@ -10,15 +32,16 @@
   }
   
   .linkedin-icon {
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     fill: blue;
   }
   
   .gmail-icon {
-    width: 24px; /* Adjust the size as needed */
-    height: 24px;
-    fill: #d93025; /* Adjust the color as needed */
-    cursor: pointer; /* Optional: Change cursor on hover */
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
   }
 
   .contact-container {
@@ -34,8 +57,8 @@
   
   .phone-icon svg,
   .mail-icon svg {
-    width: 24px; /* Adjust the size as needed */
-    height: 24px;
+    width: 30px;
+    height: 30px;
     fill: #4285f4; /* Adjust the color as needed */
     margin-right: 10px; /* Adjust the spacing between icon and details */
   }
