--- a/yagna-profile/src/app/profile-picture-data/profile-picture-data.component.html
+++ b/yagna-profile/src/app/profile-picture-data/profile-picture-data.component.html
@@ -1,74 +1,157 @@
 <p>
-    I have trained my brain with computational fluid mechanics and machine learning date sets. 
-    Enthusiastic about solving engineering problems. I'm always eager to work independently and collaboratively 
-    on projects, committed to achieving process-oriented goals.
+  "Passionate about computational fluid mechanics and machine learning, I thrive on solving engineering challenges, both
+  independently and collaboratively, with a relentless commitment to achieving process-oriented goals."
 </p>
+<br><br>
 
-<mat-icon class="github-icon" (click)="openGitHubLink()">
- <!-- Using CDN for GitHub Octicon SVG -->
- <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 40 40" fill="currentColor">
-  <path fill-rule="evenodd" d="M8 .25a8 8 0 0 0-2.534 15.583c.4.074.546-.175.546-.39 0-.192-.007-.695-.011-1.364-2.227.483-2.695-1.072-2.695-1.072-.363-.924-.887-1.17-.887-1.17-.725-.496.056-.487.056-.487.803.056 1.225.827 1.225.827.713 1.218 1.87.868 2.327.664.072-.515.278-.868.505-1.067-1.773-.2-3.633-.887-3.633-3.953 0-.874.312-1.588.827-2.148-.083-.2-.36-1.016.078-2.117 0 0 .672-.215 2.2.82.64-.178 1.32-.266 2-.27.68.004 1.36.092 2 .27 1.527-1.035 2.2-.82 2.2-.82.44 1.1.162 1.916.08 2.117.517.56.826 1.274.826 2.148 0 3.074-1.867 3.75-3.645 3.947.286.247.54.733.54 1.477 0 1.067-.01 1.927-.01 2.193 0 .215.146.467.55.39A8.002 8.002 0 0 0 8 .25z"/>
-  </svg>
-</mat-icon>
+<div class="contacts-container">
+  <div class="contact-info">
+    <div class="address-icon">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="-2 -2 24 24"
+      fill="currentColor">
+      <path fill-rule="evenodd"
+        d="M8 .25a8 8 0 0 0-2.534 15.583c.4.074.546-.175.546-.39 0-.192-.007-.695-.011-1.364-2.227.483-2.695-1.072-2.695-1.072-.363-.924-.887-1.17-.887-1.17-.725-.496.056-.487.056-.487.803.056 1.225.827 1.225.827.713 1.218 1.87.868 2.327.664.072-.515.278-.868.505-1.067-1.773-.2-3.633-.887-3.633-3.953 0-.874.312-1.588.827-2.148-.083-.2-.36-1.016.078-2.117 0 0 .672-.215 2.2.82.64-.178 1.32-.266 2-.27.68.004 1.36.092 2 .27 1.527-1.035 2.2-.82 2.2-.82.44 1.1.162 1.916.08 2.117.517.56.826 1.274.826 2.148 0 3.074-1.867 3.75-3.645 3.947.286.247.54.733.54 1.477 0 1.067-.01 1.927-.01 2.193 0 .215.146.467.55.39A8.002 8.002 0 0 0 8 .25z" />
+    </svg>
+    </div>
+    <div class="address-details">
+      <a href="https://github.com/yagna594" target="_blank">https://github.com/yagna594</a>
+    </div>
+  </div>
+</div>
+
 <br>
 <br>
-  <div class="linkedin-icon" (click)="openLinkedInLink()">
-    <!-- LinkedIn SVG -->
- <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 48 48">
-  <path fill="#0078d4" d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5	V37z"></path><path d="M30,37V26.901c0-1.689-0.819-2.698-2.192-2.698c-0.815,0-1.414,0.459-1.779,1.364	c-0.017,0.064-0.041,0.325-0.031,1.114L26,37h-7V18h7v1.061C27.022,18.356,28.275,18,29.738,18c4.547,0,7.261,3.093,7.261,8.274	L37,37H30z M11,37V18h3.457C12.454,18,11,16.528,11,14.499C11,12.472,12.478,11,14.514,11c2.012,0,3.445,1.431,3.486,3.479	C18,16.523,16.521,18,14.485,18H18v19H11z" opacity=".05"></path><path d="M30.5,36.5v-9.599c0-1.973-1.031-3.198-2.692-3.198c-1.295,0-1.935,0.912-2.243,1.677	c-0.082,0.199-0.071,0.989-0.067,1.326L25.5,36.5h-6v-18h6v1.638c0.795-0.823,2.075-1.638,4.238-1.638	c4.233,0,6.761,2.906,6.761,7.774L36.5,36.5H30.5z M11.5,36.5v-18h6v18H11.5z M14.457,17.5c-1.713,0-2.957-1.262-2.957-3.001	c0-1.738,1.268-2.999,3.014-2.999c1.724,0,2.951,1.229,2.986,2.989c0,1.749-1.268,3.011-3.015,3.011H14.457z" opacity=".07"></path><path fill="#fff" d="M12,19h5v17h-5V19z M14.485,17h-0.028C12.965,17,12,15.888,12,14.499C12,13.08,12.995,12,14.514,12	c1.521,0,2.458,1.08,2.486,2.499C17,15.887,16.035,17,14.485,17z M36,36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698	c-1.501,0-2.313,1.012-2.707,1.99C24.957,25.543,25,26.511,25,27v9h-5V19h5v2.616C25.721,20.5,26.85,19,29.738,19	c3.578,0,6.261,2.25,6.261,7.274L36,36L36,36z"></path>
+<div class="linkedin-icon" (click)="openLinkedInLink()">
+  <!-- LinkedIn SVG -->
+  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 48 48">
+    <path fill="#0078d4"
+      d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5	V37z"></path>
+    <path
+      d="M30,37V26.901c0-1.689-0.819-2.698-2.192-2.698c-0.815,0-1.414,0.459-1.779,1.364	c-0.017,0.064-0.041,0.325-0.031,1.114L26,37h-7V18h7v1.061C27.022,18.356,28.275,18,29.738,18c4.547,0,7.261,3.093,7.261,8.274	L37,37H30z M11,37V18h3.457C12.454,18,11,16.528,11,14.499C11,12.472,12.478,11,14.514,11c2.012,0,3.445,1.431,3.486,3.479	C18,16.523,16.521,18,14.485,18H18v19H11z"
+      opacity=".05"></path>
+    <path
+      d="M30.5,36.5v-9.599c0-1.973-1.031-3.198-2.692-3.198c-1.295,0-1.935,0.912-2.243,1.677	c-0.082,0.199-0.071,0.989-0.067,1.326L25.5,36.5h-6v-18h6v1.638c0.795-0.823,2.075-1.638,4.238-1.638	c4.233,0,6.761,2.906,6.761,7.774L36.5,36.5H30.5z M11.5,36.5v-18h6v18H11.5z M14.457,17.5c-1.713,0-2.957-1.262-2.957-3.001	c0-1.738,1.268-2.999,3.014-2.999c1.724,0,2.951,1.229,2.986,2.989c0,1.749-1.268,3.011-3.015,3.011H14.457z"
+      opacity=".07"></path>
+    <path fill="#fff"
+      d="M12,19h5v17h-5V19z M14.485,17h-0.028C12.965,17,12,15.888,12,14.499C12,13.08,12.995,12,14.514,12	c1.521,0,2.458,1.08,2.486,2.499C17,15.887,16.035,17,14.485,17z M36,36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698	c-1.501,0-2.313,1.012-2.707,1.99C24.957,25.543,25,26.511,25,27v9h-5V19h5v2.616C25.721,20.5,26.85,19,29.738,19	c3.578,0,6.261,2.25,6.261,7.274L36,36L36,36z">
+    </path>
   </svg>
+</div>
+<br>
+<br>
+
+<div class="contacts-container">
+  <div class="contact-info">
+    <div class="address-icon">
+      <!-- Add the Address Icon SVG here -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48">
+        <defs>
+          <style>
+            .cls-1 {
+              fill: #111
+            }
+
+            .cls-2 {
+              fill: #00c569
+            }
+          </style>
+        </defs>
+        <title>Nieder Ramstaädterstraße 243A, Darmstadt</title>
+        <g id="Layer_2" data-name="Layer 2">
+          <g id="Address">
+            <path class="cls-1"
+              d="M25.68 35a2.5 2.5 0 0 0 3.43-1C32.33 27.75 35 21.33 35 17.5a17.5 17.5 0 0 0-35 0C0 25 10.87 42.47 15.71 49a2.77 2.77 0 0 0 4.49-.06c1.07-1.53 2.44-3.64 3.93-6.08a2.52 2.52 0 0 0-.93-3.49 2.51 2.51 0 0 0-3.34.9c-.67 1.1-1.33 2.16-2 3.16C12.17 35.13 5 22.2 5 17.5a12.5 12.5 0 0 1 25 0c0 2.77-2.32 8.36-5.33 14.18a2.51 2.51 0 0 0 1 3.34z">
+            </path>
+            <path class="cls-2"
+              d="M17.5 14a3.5 3.5 0 1 1-3.5 3.5 3.5 3.5 0 0 1 3.5-3.5m0-5a8.5 8.5 0 1 0 8.5 8.5A8.51 8.51 0 0 0 17.5 9z">
+            </path>
+          </g>
+        </g>
+      </svg>
+    </div>
+    <div class="address-details">
+      <p>Nieder Ramstädterstraße 243A,
+      <p>Darmstadt, 64285</p>
+    </div>
+  </div>
+  <br>
+  <br>
+
+  <div class="contact-info">
+    <div class="phone-icon">
+      <!-- Add the Phone Icon SVG here -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-12 -1 64 64">
+        <title>Artboard 1</title>
+        <g id="Layer_2" data-name="Layer 2">
+          <path
+            d="M23.21,28.53A32.51,32.51,0,0,0,28,35.26a27.67,27.67,0,0,0,7.61,5.62.81.81,0,0,0,.66,0,2.78,2.78,0,0,0,.92-.66,11.08,11.08,0,0,0,.83-1c1.23-1.61,2.74-3.6,4.88-2.6l.13.06,7.13,4.1.06,0a3.23,3.23,0,0,1,1.34,2.78,7.49,7.49,0,0,1-1,3.53,7.22,7.22,0,0,1-3.43,3,15.36,15.36,0,0,1-4.23,1.15,14.42,14.42,0,0,1-6.46-.53,28.82,28.82,0,0,1-6.49-3.14l-.17-.11c-1.06-.66-2.2-1.36-3.32-2.19a41.65,41.65,0,0,1-11-12.47c-2.27-4.12-3.52-8.57-2.84-12.82a9.2,9.2,0,0,1,3.12-5.83,8.28,8.28,0,0,1,6.2-1.66.91.91,0,0,1,.72.46l4.57,7.73a2.41,2.41,0,0,1,.38,2.59,5,5,0,0,1-1.75,2c-.24.21-.53.42-.84.64-1,.74-2.19,1.6-1.79,2.61v0Z">
+          </path>
+        </g>
+      </svg>
+    </div>
+    <div class="contact-details">
+      <p>Phone: +49 17687986265</p>
+    </div>
   </div>
   <br>
   <br>
 
   <div class="contacts-container">
     <div class="contact-info">
-      <div class="address-icon">
-        <!-- Add the Address Icon SVG here -->
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 48 48"><defs><style>.cls-1{fill:#111}.cls-2{fill:#00c569}</style></defs>
-          <title>Nieder Ramstaädterstraße 243A, Darmstadt</title>
-          <g id="Layer_2" data-name="Layer 2"><g id="Address">
-          <path class="cls-1" d="M25.68 35a2.5 2.5 0 0 0 3.43-1C32.33 27.75 35 21.33 35 17.5a17.5 17.5 0 0 0-35 0C0 25 10.87 42.47 15.71 49a2.77 2.77 0 0 0 4.49-.06c1.07-1.53 2.44-3.64 3.93-6.08a2.52 2.52 0 0 0-.93-3.49 2.51 2.51 0 0 0-3.34.9c-.67 1.1-1.33 2.16-2 3.16C12.17 35.13 5 22.2 5 17.5a12.5 12.5 0 0 1 25 0c0 2.77-2.32 8.36-5.33 14.18a2.51 2.51 0 0 0 1 3.34z"></path><path class="cls-2" d="M17.5 14a3.5 3.5 0 1 1-3.5 3.5 3.5 3.5 0 0 1 3.5-3.5m0-5a8.5 8.5 0 1 0 8.5 8.5A8.51 8.51 0 0 0 17.5 9z"></path></g></g></svg>  
-      </div>
-      <div class="address-details">
-        <p>Nieder Ramstädterstraße 243A,
-        <p>Darmstadt, 64285</p>
-      </div>
-    </div>
-    <br>
-    <br>
-
-    <div class="contact-info">
-      <div class="phone-icon">
-        <!-- Add the Phone Icon SVG here -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><title>Artboard 1</title>
-         <g id="Layer_2" data-name="Layer 2"><path d="M23.21,28.53A32.51,32.51,0,0,0,28,35.26a27.67,27.67,0,0,0,7.61,5.62.81.81,0,0,0,.66,0,2.78,2.78,0,0,0,.92-.66,11.08,11.08,0,0,0,.83-1c1.23-1.61,2.74-3.6,4.88-2.6l.13.06,7.13,4.1.06,0a3.23,3.23,0,0,1,1.34,2.78,7.49,7.49,0,0,1-1,3.53,7.22,7.22,0,0,1-3.43,3,15.36,15.36,0,0,1-4.23,1.15,14.42,14.42,0,0,1-6.46-.53,28.82,28.82,0,0,1-6.49-3.14l-.17-.11c-1.06-.66-2.2-1.36-3.32-2.19a41.65,41.65,0,0,1-11-12.47c-2.27-4.12-3.52-8.57-2.84-12.82a9.2,9.2,0,0,1,3.12-5.83,8.28,8.28,0,0,1,6.2-1.66.91.91,0,0,1,.72.46l4.57,7.73a2.41,2.41,0,0,1,.38,2.59,5,5,0,0,1-1.75,2c-.24.21-.53.42-.84.64-1,.74-2.19,1.6-1.79,2.61v0Z"></path></g>
-      </svg>
-      </div>
-      <div class="contact-details">
-        <p>Phone: +49 17687986265</p>
-      </div>
-    </div>
-    <br>
-    <br>
-
-    <div class="contact-info">
-      <div class="contact-info">
-        <a href="yagnamurthy594@gmail.com" class="gmail-link">
-          <!-- Add the Gmail SVG here -->
-              <!-- Gmail SVG -->
-              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 48 48">
-                <linearGradient id="6769YB8EDCGhMGPdL9zwWa_ho8QlOYvMuG3_gr1" x1="15.072" x2="24.111" y1="13.624" y2="24.129" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#e3e3e3"></stop><stop offset="1" stop-color="#e2e2e2"></stop></linearGradient><path fill="url(#6769YB8EDCGhMGPdL9zwWa_ho8QlOYvMuG3_gr1)" d="M42.485,40H5.515C4.126,40,3,38.874,3,37.485V10.515C3,9.126,4.126,8,5.515,8h36.969	C43.874,8,45,9.126,45,10.515v26.969C45,38.874,43.874,40,42.485,40z"></path><linearGradient id="6769YB8EDCGhMGPdL9zwWb_ho8QlOYvMuG3_gr2" x1="26.453" x2="36.17" y1="25.441" y2="37.643" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f5f5f5"></stop><stop offset=".03" stop-color="#eee"></stop><stop offset="1" stop-color="#eee"></stop></linearGradient><path fill="url(#6769YB8EDCGhMGPdL9zwWb_ho8QlOYvMuG3_gr2)" d="M42.485,40H8l37-29v26.485C45,38.874,43.874,40,42.485,40z"></path><linearGradient id="6769YB8EDCGhMGPdL9zwWc_ho8QlOYvMuG3_gr3" x1="3" x2="45" y1="24" y2="24" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#d74a39"></stop><stop offset="1" stop-color="#c73d28"></stop></linearGradient><path fill="url(#6769YB8EDCGhMGPdL9zwWc_ho8QlOYvMuG3_gr3)" d="M5.515,8H8v32H5.515C4.126,40,3,38.874,3,37.485V10.515C3,9.126,4.126,8,5.515,8z M42.485,8	H40v32h2.485C43.874,40,45,38.874,45,37.485V10.515C45,9.126,43.874,8,42.485,8z"></path><linearGradient id="6769YB8EDCGhMGPdL9zwWd_ho8QlOYvMuG3_gr4" x1="24" x2="24" y1="8" y2="38.181" gradientUnits="userSpaceOnUse"><stop offset="0" stop-opacity=".15"></stop><stop offset="1" stop-opacity=".03"></stop></linearGradient><path fill="url(#6769YB8EDCGhMGPdL9zwWd_ho8QlOYvMuG3_gr4)" d="M42.485,40H30.515L3,11.485v-0.969C3,9.126,4.126,8,5.515,8h36.969	C43.874,8,45,9.126,45,10.515v26.969C45,38.874,43.874,40,42.485,40z"></path><linearGradient id="6769YB8EDCGhMGPdL9zwWe_ho8QlOYvMuG3_gr5" x1="3" x2="45" y1="17.73" y2="17.73" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#f5f5f5"></stop><stop offset="1" stop-color="#f5f5f5"></stop></linearGradient><path fill="url(#6769YB8EDCGhMGPdL9zwWe_ho8QlOYvMuG3_gr5)" d="M43.822,13.101L24,27.459L4.178,13.101C3.438,12.565,3,11.707,3,10.793v-0.278	C3,9.126,4.126,8,5.515,8h36.969C43.874,8,45,9.126,45,10.515v0.278C45,11.707,44.562,12.565,43.822,13.101z"></path><linearGradient id="6769YB8EDCGhMGPdL9zwWf_ho8QlOYvMuG3_gr6" x1="24" x2="24" y1="8.446" y2="27.811" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#e05141"></stop><stop offset="1" stop-color="#de4735"></stop></linearGradient><path fill="url(#6769YB8EDCGhMGPdL9zwWf_ho8QlOYvMuG3_gr6)" d="M42.485,8h-0.3L24,21.172L5.815,8h-0.3C4.126,8,3,9.126,3,10.515v0.278	c0,0.914,0.438,1.772,1.178,2.308L24,27.459l19.822-14.358C44.562,12.565,45,11.707,45,10.793v-0.278C45,9.126,43.874,8,42.485,8z"></path>
-                </svg>
-        </a>
-      <div class="contact-details">
-        <p> yagnamurthy594@gmail.com</p>
-      </div>
+        <svg xmlns="http://www.w3.org/2000/svg"  width="30" height="30" viewBox="10 0 48 48">
+          <linearGradient id="6769YB8EDCGhMGPdL9zwWa_ho8QlOYvMuG3_gr1" x1="15.072" x2="24.111" y1="13.624" y2="24.129"
+            gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#e3e3e3"></stop>
+            <stop offset="1" stop-color="#e2e2e2"></stop>
+          </linearGradient>
+          <path fill="url(#6769YB8EDCGhMGPdL9zwWa_ho8QlOYvMuG3_gr1)"
+            d="M42.485,40H5.515C4.126,40,3,38.874,3,37.485V10.515C3,9.126,4.126,8,5.515,8h36.969	C43.874,8,45,9.126,45,10.515v26.969C45,38.874,43.874,40,42.485,40z">
+          </path>
+          <linearGradient id="6769YB8EDCGhMGPdL9zwWb_ho8QlOYvMuG3_gr2" x1="26.453" x2="36.17" y1="25.441" y2="37.643"
+            gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#f5f5f5"></stop>
+            <stop offset=".03" stop-color="#eee"></stop>
+            <stop offset="1" stop-color="#eee"></stop>
+          </linearGradient>
+          <path fill="url(#6769YB8EDCGhMGPdL9zwWb_ho8QlOYvMuG3_gr2)"
+            d="M42.485,40H8l37-29v26.485C45,38.874,43.874,40,42.485,40z"></path>
+          <linearGradient id="6769YB8EDCGhMGPdL9zwWc_ho8QlOYvMuG3_gr3" x1="3" x2="45" y1="24" y2="24"
+            gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#d74a39"></stop>
+            <stop offset="1" stop-color="#c73d28"></stop>
+          </linearGradient>
+          <path fill="url(#6769YB8EDCGhMGPdL9zwWc_ho8QlOYvMuG3_gr3)"
+            d="M5.515,8H8v32H5.515C4.126,40,3,38.874,3,37.485V10.515C3,9.126,4.126,8,5.515,8z M42.485,8	H40v32h2.485C43.874,40,45,38.874,45,37.485V10.515C45,9.126,43.874,8,42.485,8z">
+          </path>
+          <linearGradient id="6769YB8EDCGhMGPdL9zwWd_ho8QlOYvMuG3_gr4" x1="24" x2="24" y1="8" y2="38.181"
+            gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-opacity=".15"></stop>
+            <stop offset="1" stop-opacity=".03"></stop>
+          </linearGradient>
+          <path fill="url(#6769YB8EDCGhMGPdL9zwWd_ho8QlOYvMuG3_gr4)"
+            d="M42.485,40H30.515L3,11.485v-0.969C3,9.126,4.126,8,5.515,8h36.969	C43.874,8,45,9.126,45,10.515v26.969C45,38.874,43.874,40,42.485,40z">
+          </path>
+          <linearGradient id="6769YB8EDCGhMGPdL9zwWe_ho8QlOYvMuG3_gr5" x1="3" x2="45" y1="17.73" y2="17.73"
+            gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#f5f5f5"></stop>
+            <stop offset="1" stop-color="#f5f5f5"></stop>
+          </linearGradient>
+          <path fill="url(#6769YB8EDCGhMGPdL9zwWe_ho8QlOYvMuG3_gr5)"
+            d="M43.822,13.101L24,27.459L4.178,13.101C3.438,12.565,3,11.707,3,10.793v-0.278	C3,9.126,4.126,8,5.515,8h36.969C43.874,8,45,9.126,45,10.515v0.278C45,11.707,44.562,12.565,43.822,13.101z">
+          </path>
+          <linearGradient id="6769YB8EDCGhMGPdL9zwWf_ho8QlOYvMuG3_gr6" x1="24" x2="24" y1="8.446" y2="27.811"
+            gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#e05141"></stop>
+            <stop offset="1" stop-color="#de4735"></stop>
+          </linearGradient>
+          <path fill="url(#6769YB8EDCGhMGPdL9zwWf_ho8QlOYvMuG3_gr6)"
+            d="M42.485,8h-0.3L24,21.172L5.815,8h-0.3C4.126,8,3,9.126,3,10.515v0.278	c0,0.914,0.438,1.772,1.178,2.308L24,27.459l19.822-14.358C44.562,12.565,45,11.707,45,10.793v-0.278C45,9.126,43.874,8,42.485,8z">
+          </path>
+        </svg>
+        <div class="address-details">
+          <a href="yagnamurthy594@gmail.com" target="_blank">yagnamurthy594@gmail.com</a>
+        </div>
     </div>
     <br>
 
   </div>
-  
-  
-  
-  
