feat: updated page build files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div [style.backgroundImage]="'url(assets/images/background-image.jpg)'" class="container">
     <div class="profile-picture">
         <app-profile-picture></app-profile-picture>
         <br><br>
